# thread-dump-analyser

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs
src/analyzer/: contention.rs  deadlock.rs  heap_analysis.rs  hot_threads.rs  mod.rs  thread_overview.rs
src/model/: finding.rs  histogram.rs  mod.rs  pool.rs  thread.rs
src/parser/: heap_histogram.rs  mod.rs  thread_dump.rs
src/report/: json.rs  summary.rs  terminal.rs
tests/: integration_test.rs
tests/fixtures/: deadlock-thread-dump.txt  sample-heap-histogram.txt  sample-thread-dump.txt
