[package]
name = "tdanalyzer"
version = "0.1.0"
edition = "2021"
description = "JVM thread dump and heap histogram analyzer"
authors = ["Community"]

[[bin]]
name = "tdanalyzer"
path = "src/main.rs"

[dependencies]
# CLI argument parsing
clap = { version = "4", features = ["derive"] }
# Serialization / JSON output
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Terminal colouring
owo-colors = "4"
# Date/time for report headers
chrono = { version = "0.4", features = ["clock"] }
# Regex for stack frame parsing
regex = "1"

[dev-dependencies]
pretty_assertions = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
